packages/elements/src/components/ino-select/ino-select.scss
@use '../base/mdc-customize';
@use '@material/list';
@use '@material/menu-surface/mdc-menu-surface';
@use '@material/menu/mdc-menu';
@use '@material/select/mdc-select';
@use '@material/select';
@use '../base/new-theme' as theme;
@use '../ino-label/ino-label';

// Tailwind CSS Preflight border-style countermeasures (https://tailwindcss.com/docs/preflight#border-styles-are-reset-globally)
ino-select * {
  border-style: none;
}

@include list.deprecated-core-styles;

$not-outlined-select: 'not(.mdc-select--outlined)';
$placeholder-color: rgba(0, 0, 0, 0.6);
$border-radius: 0.7rem;

$icon-drop-down-size: 24px;

@mixin setIconColors($color) {
  .mdc-select__icon {
    ino-icon {
      --icon-color: #{$color};
    }
  }
}

ino-select {
  /**
  * @prop --ino-select-height: Height of the open select menu
  * @prop --ino-select-icon-color: Icon color
  * @prop --ino-border-radius: Border-radius of the open select menu
  */
  --select-height: auto;
  --select-icon-color: var(--ino-select-icon-color, #{theme.$p-5});
  --border-radius: var(var(--ino-border-radius), $border-radius);

  display: block;

  .ino-hidden-input {
    width: 0;
    height: 0;
    padding: 0;
    margin: 0;
    border: 0;
  }

  .mdc-select__menu {
    margin-top: 0.57rem;
    border-radius: $border-radius;
    height: var(--select-height);
    box-shadow: 0px 0px 22px 0px rgba(93, 91, 105, 0.35);

    ul {
      padding: 0;
    }
  }

  .mdc-select__anchor,
  .mdc-select,
  .mdc-select__menu {
    width: 100%;
  }

  @include setIconColors($placeholder-color);

  .mdc-select--focused {
    @include setIconColors(var(--select-icon-color));

    .mdc-select__anchor {
      @include select.dropdown-icon-color(theme.$p-5);
    }
  }

  .mdc-select {
    @include select.label-color(
      (
        focus: theme.$p-5,
      )
    );
    @include select.bottom-line-color(
      (
        focus: theme.$p-5,
      )
    );
    @include select.outline-color(
      (
        focus: theme.$p-5,
      )
    );
    @include select.container-fill-color(
      (
        default: transparent,
        disabled: transparent,
      )
    );

    .mdc-select__anchor:before {
      display: none;
    }

    .mdc-select__dropdown-icon {
      width: $icon-drop-down-size;
      height: $icon-drop-down-size;

      ino-icon {
        --icon-width: $icon-drop-down-size;
        --icon-height: $icon-drop-down-size;
      }
    }

    .mdc-menu-surface--is-open-below {
      border-top-right-radius: $border-radius;
      border-top-left-radius: $border-radius;
    }
  }

  .mdc-select.mdc-select--outlined .mdc-select__selected-text {
    display: block;
  }

  .mdc-select__selected-text {
    text-overflow: ellipsis;
    overflow: hidden;
  }

  .mdc-select--filled {
    .mdc-select__anchor {
      padding-left: 0;
    }

    .mdc-select__selected-text {
      margin-top: 24px;
    }

    .mdc-select__icon {
      margin-top: 12px;
    }

    .mdc-select__dropdown-icon {
      margin-top: 18px;
    }

    .mdc-floating-label {
      top: 36px;
    }

    .mdc-floating-label.mdc-floating-label--float-above {
      top: 25px;
    }

    &[class*='--with-leading-icon'] {
      .mdc-floating-label,
      .mdc-floating-label--float-above {
        left: 48px;
      }
    }
  }

  // make sure the border-color is the default if focused and invalid
  .mdc-select.mdc-select--outlined.mdc-select--invalid.mdc-select--focused {
    @include ino-label.outline-border-color(theme.$p-5);
  }

  .mdc-select--outlined {
    .mdc-select__selected-text {
      margin-top: 16px;
    }

    .mdc-floating-label.mdc-floating-label--float-above {
      top: 28px;
    }

    &[class*='--with-leading-icon'] ino-icon {
      display: unset; // center icon vertically
    }
  }

  &:not(.ino-select-outlined) .mdc-select-helper-text {
    margin-left: 0;
  }
}

